--- a/sphinx_simplepdf/themes/simplepdf_theme/static/styles/sources/_lists.scss
+++ b/sphinx_simplepdf/themes/simplepdf_theme/static/styles/sources/_lists.scss
@@ -1,8 +1,12 @@
 ul, ol {
     padding-left: 15px;
 
-    ul, ol {
-        padding-left: 20px;
+    p:last-of-type {
+        margin-bottom: 0.21em;
+    }
+
+    li:last-of-type {
+        margin-bottom: 0.21em;
     }
 }
 
